// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._1qvf1da11,html._1qvf1da11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1cprxzt0 _1b9a5rt10 _1b9a5rt13">
+        <div class="_1eiowcn0 _1qvf1da8s _1qvf1da7o _1qvf1dab0 _1qvf1da9w _1qvf1da5g _1qvf1da6c _1qvf1daic _1qvf1da4k _1qvf1da4d _1b9a5rt10 _1b9a5rt13 _1qvf1da34 _1qvf1da37">
+          <span class="_1eiowcn0 _1qvf1da50 _1b9a5rt0 _1b9a5rt1 _1b9a5rt1t _1b9a5rta e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1eiowcn0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1eiowcn1 {
  display: block;
}
._1eiowcn2 {
  line-height: 1;
}
._1eiowcn3 {
  list-style: none;
}
._1eiowcn4 {
  quotes: none;
}
._1eiowcn4:after,
._1eiowcn4:before {
  content: "";
}
._1eiowcn5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1eiowcn6 {
  -webkit-appearance: none;
  appearance: none;
}
._1eiowcn7 {
  background-color: transparent;
}
._1eiowcn8 {
  outline: var(--_1isshxf10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1eiowcn8:focus-visible {
  outline-color: var(--_1isshxfm);
}
._1eiowcna {
  color: inherit;
}
._1eiowcnb:disabled {
  opacity: 1;
}
._1eiowcnb::-ms-expand {
  display: none;
}
._1eiowcnd[type="number"] {
  -moz-appearance: textfield;
}
._1eiowcnd[type="number"]::-webkit-inner-spin-button,
._1eiowcnd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1eiowcnd::-ms-clear {
  display: none;
}
._1eiowcnd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1eiowcng {
  color: inherit;
  text-decoration: none;
}
._1qvf1da0 {
  overflow: hidden;
}
._1qvf1da1 {
  overflow: scroll;
}
._1qvf1da2 {
  overflow: visible;
}
._1qvf1da3 {
  overflow: auto;
}
._1qvf1da4 {
  -webkit-user-select: none;
  user-select: none;
}
._1qvf1da5 {
  outline: none;
}
._1qvf1da6 {
  outline: var(--_1isshxf10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1qvf1da6:focus-visible {
  outline-color: var(--_1isshxfm);
}
._1qvf1da7 {
  opacity: 0;
}
._1qvf1da8 {
  z-index: 0;
}
._1qvf1da9 {
  z-index: 1;
}
._1qvf1daa {
  z-index: 2;
}
._1qvf1dab {
  z-index: 90;
}
._1qvf1dac {
  z-index: 100;
}
._1qvf1dad {
  z-index: 200;
}
._1qvf1dae {
  z-index: 290;
}
._1qvf1daf {
  z-index: 300;
}
._1qvf1dag {
  z-index: 400;
}
._1qvf1dah {
  cursor: default;
}
._1qvf1dai {
  cursor: pointer;
}
._1qvf1daj {
  pointer-events: none;
}
._1qvf1dak {
  top: 0;
}
._1qvf1dal {
  bottom: 0;
}
._1qvf1dam {
  left: 0;
}
._1qvf1dan {
  right: 0;
}
._1qvf1dao {
  height: 100%;
}
._1qvf1dap {
  height: var(--_1isshxf9);
}
._1qvf1daq {
  width: 100%;
}
._1qvf1dar {
  width: var(--_1isshxf9);
}
._1qvf1das {
  min-width: 0;
}
._1qvf1dat {
  max-width: var(--_1isshxf11);
}
._1qvf1dau {
  max-width: var(--_1isshxf12);
}
._1qvf1dav {
  max-width: var(--_1isshxf13);
}
._1qvf1daw {
  max-width: var(--_1isshxf14);
}
._1qvf1dax {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._1qvf1day {
  transition: var(--_1isshxf5i);
}
._1qvf1daz {
  transition: var(--_1isshxf5j);
}
._1qvf1da10:active {
  transform: var(--_1isshxf5k);
}
html._1qvf1da11 ._1qvf1da13,
html:not(._1qvf1da11) ._1qvf1da12 {
  background: var(--_1isshxf1t);
}
html._1qvf1da11 ._1qvf1da15,
html:not(._1qvf1da11) ._1qvf1da14 {
  background: var(--_1isshxf1u);
}
html._1qvf1da11 ._1qvf1da17,
html:not(._1qvf1da11) ._1qvf1da16 {
  background: var(--_1isshxf1v);
}
html._1qvf1da11 ._1qvf1da19,
html:not(._1qvf1da11) ._1qvf1da18 {
  background: var(--_1isshxf1w);
}
html._1qvf1da11 ._1qvf1da1b,
html:not(._1qvf1da11) ._1qvf1da1a {
  background: var(--_1isshxf1x);
}
html._1qvf1da11 ._1qvf1da1d,
html:not(._1qvf1da11) ._1qvf1da1c {
  background: var(--_1isshxf1y);
}
html._1qvf1da11 ._1qvf1da1f,
html:not(._1qvf1da11) ._1qvf1da1e {
  background: var(--_1isshxf1z);
}
html._1qvf1da11 ._1qvf1da1h,
html:not(._1qvf1da11) ._1qvf1da1g {
  background: var(--_1isshxf20);
}
html._1qvf1da11 ._1qvf1da1j,
html:not(._1qvf1da11) ._1qvf1da1i {
  background: var(--_1isshxf21);
}
html._1qvf1da11 ._1qvf1da1l,
html:not(._1qvf1da11) ._1qvf1da1k {
  background: var(--_1isshxf22);
}
html._1qvf1da11 ._1qvf1da1n,
html:not(._1qvf1da11) ._1qvf1da1m {
  background: var(--_1isshxf23);
}
html._1qvf1da11 ._1qvf1da1p,
html:not(._1qvf1da11) ._1qvf1da1o {
  background: var(--_1isshxf24);
}
html._1qvf1da11 ._1qvf1da1r,
html:not(._1qvf1da11) ._1qvf1da1q {
  background: var(--_1isshxf25);
}
html._1qvf1da11 ._1qvf1da1t,
html:not(._1qvf1da11) ._1qvf1da1s {
  background: var(--_1isshxf26);
}
html._1qvf1da11 ._1qvf1da1v,
html:not(._1qvf1da11) ._1qvf1da1u {
  background: var(--_1isshxf27);
}
html._1qvf1da11 ._1qvf1da1x,
html:not(._1qvf1da11) ._1qvf1da1w {
  background: var(--_1isshxf28);
}
html._1qvf1da11 ._1qvf1da1z,
html:not(._1qvf1da11) ._1qvf1da1y {
  background: var(--_1isshxf29);
}
html._1qvf1da11 ._1qvf1da21,
html:not(._1qvf1da11) ._1qvf1da20 {
  background: var(--_1isshxf2a);
}
html._1qvf1da11 ._1qvf1da23,
html:not(._1qvf1da11) ._1qvf1da22 {
  background: var(--_1isshxf2b);
}
html._1qvf1da11 ._1qvf1da25,
html:not(._1qvf1da11) ._1qvf1da24 {
  background: var(--_1isshxf2c);
}
html._1qvf1da11 ._1qvf1da27,
html:not(._1qvf1da11) ._1qvf1da26 {
  background: var(--_1isshxf2d);
}
html._1qvf1da11 ._1qvf1da29,
html:not(._1qvf1da11) ._1qvf1da28 {
  background: var(--_1isshxf2e);
}
html._1qvf1da11 ._1qvf1da2b,
html:not(._1qvf1da11) ._1qvf1da2a {
  background: var(--_1isshxf2f);
}
html._1qvf1da11 ._1qvf1da2d,
html:not(._1qvf1da11) ._1qvf1da2c {
  background: var(--_1isshxf2g);
}
html._1qvf1da11 ._1qvf1da2f,
html:not(._1qvf1da11) ._1qvf1da2e {
  background: var(--_1isshxf2h);
}
html._1qvf1da11 ._1qvf1da2h,
html:not(._1qvf1da11) ._1qvf1da2g {
  background: var(--_1isshxf2i);
}
html._1qvf1da11 ._1qvf1da2j,
html:not(._1qvf1da11) ._1qvf1da2i {
  background: var(--_1isshxf2j);
}
html._1qvf1da11 ._1qvf1da2l,
html:not(._1qvf1da11) ._1qvf1da2k {
  background: var(--_1isshxf2k);
}
html._1qvf1da11 ._1qvf1da2n,
html:not(._1qvf1da11) ._1qvf1da2m {
  background: var(--_1isshxf2l);
}
html._1qvf1da11 ._1qvf1da2p,
html:not(._1qvf1da11) ._1qvf1da2o {
  background: var(--_1isshxf2m);
}
html._1qvf1da11 ._1qvf1da2r,
html:not(._1qvf1da11) ._1qvf1da2q {
  background: var(--_1isshxf2n);
}
html._1qvf1da11 ._1qvf1da2t,
html:not(._1qvf1da11) ._1qvf1da2s {
  background: var(--_1isshxf2o);
}
html._1qvf1da11 ._1qvf1da2v,
html:not(._1qvf1da11) ._1qvf1da2u {
  background: var(--_1isshxf2p);
}
html._1qvf1da11 ._1qvf1da2x,
html:not(._1qvf1da11) ._1qvf1da2w {
  background: var(--_1isshxf2q);
}
html._1qvf1da11 ._1qvf1da2z,
html:not(._1qvf1da11) ._1qvf1da2y {
  background: var(--_1isshxf2r);
}
html._1qvf1da11 ._1qvf1da31,
html:not(._1qvf1da11) ._1qvf1da30 {
  background: var(--_1isshxf2s);
}
html._1qvf1da11 ._1qvf1da33,
html:not(._1qvf1da11) ._1qvf1da32 {
  background: var(--_1isshxf2t);
}
html._1qvf1da11 ._1qvf1da35,
html:not(._1qvf1da11) ._1qvf1da34 {
  background: var(--_1isshxf2u);
}
html._1qvf1da11 ._1qvf1da37,
html:not(._1qvf1da11) ._1qvf1da36 {
  background: var(--_1isshxf2v);
}
html._1qvf1da11 ._1qvf1da39,
html:not(._1qvf1da11) ._1qvf1da38 {
  box-shadow: var(--_1isshxf5l);
}
html._1qvf1da11 ._1qvf1da3b,
html:not(._1qvf1da11) ._1qvf1da3a {
  box-shadow: var(--_1isshxf5m);
}
html._1qvf1da11 ._1qvf1da3d,
html:not(._1qvf1da11) ._1qvf1da3c {
  box-shadow: var(--_1isshxf5n);
}
html._1qvf1da11 ._1qvf1da3f,
html:not(._1qvf1da11) ._1qvf1da3e {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxff);
}
html._1qvf1da11 ._1qvf1da3h,
html:not(._1qvf1da11) ._1qvf1da3g {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfg);
}
html._1qvf1da11 ._1qvf1da3j,
html:not(._1qvf1da11) ._1qvf1da3i {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxff);
}
html._1qvf1da11 ._1qvf1da3l,
html:not(._1qvf1da11) ._1qvf1da3k {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfg);
}
html._1qvf1da11 ._1qvf1da3n,
html:not(._1qvf1da11) ._1qvf1da3m {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfh);
}
html._1qvf1da11 ._1qvf1da3p,
html:not(._1qvf1da11) ._1qvf1da3o {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfi);
}
html._1qvf1da11 ._1qvf1da3r,
html:not(._1qvf1da11) ._1qvf1da3q {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfj);
}
html._1qvf1da11 ._1qvf1da3t,
html:not(._1qvf1da11) ._1qvf1da3s {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfj);
}
html._1qvf1da11 ._1qvf1da3v,
html:not(._1qvf1da11) ._1qvf1da3u {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfk);
}
html._1qvf1da11 ._1qvf1da3x,
html:not(._1qvf1da11) ._1qvf1da3w {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfk);
}
html._1qvf1da11 ._1qvf1da3z,
html:not(._1qvf1da11) ._1qvf1da3y {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfl);
}
html._1qvf1da11 ._1qvf1da41,
html:not(._1qvf1da11) ._1qvf1da40 {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfn);
}
html._1qvf1da11 ._1qvf1da43,
html:not(._1qvf1da11) ._1qvf1da42 {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfn);
}
html._1qvf1da11 ._1qvf1da45,
html:not(._1qvf1da11) ._1qvf1da44 {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfo);
}
html._1qvf1da11 ._1qvf1da47,
html:not(._1qvf1da11) ._1qvf1da46 {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfo);
}
html._1qvf1da11 ._1qvf1da49,
html:not(._1qvf1da11) ._1qvf1da48 {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfp);
}
html._1qvf1da11 ._1qvf1da4b,
html:not(._1qvf1da11) ._1qvf1da4a {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfq);
}
html._1qvf1da11 ._1qvf1da4d,
html:not(._1qvf1da11) ._1qvf1da4c {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfr);
}
html._1qvf1da11 ._1qvf1da4f,
html:not(._1qvf1da11) ._1qvf1da4e {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfr);
}
html._1qvf1da11 ._1qvf1da4h,
html:not(._1qvf1da11) ._1qvf1da4g {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfs);
}
html._1qvf1da11 ._1qvf1da4j,
html:not(._1qvf1da11) ._1qvf1da4i {
  box-shadow: inset 0 0 0 var(--_1isshxfz) var(--_1isshxfs);
}
html._1qvf1da11 ._1qvf1da4l,
html:not(._1qvf1da11) ._1qvf1da4k {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxft);
}
html._1qvf1da11 ._1qvf1da4n,
html:not(._1qvf1da11) ._1qvf1da4m {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfu);
}
html._1qvf1da11 ._1qvf1da4p,
html:not(._1qvf1da11) ._1qvf1da4o {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfv);
}
html._1qvf1da11 ._1qvf1da4r,
html:not(._1qvf1da11) ._1qvf1da4q {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfw);
}
html._1qvf1da11 ._1qvf1da4t,
html:not(._1qvf1da11) ._1qvf1da4s {
  box-shadow: inset 0 0 0 var(--_1isshxfy) var(--_1isshxfx);
}
html._1qvf1da11 ._1qvf1da4v,
html:not(._1qvf1da11) ._1qvf1da4u {
  box-shadow: 0 0 0 var(--_1isshxf10) var(--_1isshxfm);
}
._1qvf1da4w {
  display: none;
}
._1qvf1da50 {
  display: block;
}
._1qvf1da54 {
  display: inline;
}
._1qvf1da58 {
  display: inline-block;
}
._1qvf1da5c {
  display: flex;
}
._1qvf1da5g {
  position: relative;
}
._1qvf1da5k {
  position: absolute;
}
._1qvf1da5o {
  position: fixed;
}
._1qvf1da5s {
  position: sticky;
}
._1qvf1da5w {
  border-radius: 0;
}
._1qvf1da60 {
  border-radius: 9999px;
}
._1qvf1da64 {
  border-radius: var(--_1isshxfb);
}
._1qvf1da68 {
  border-radius: var(--_1isshxfc);
}
._1qvf1da6c {
  border-radius: var(--_1isshxfd);
}
._1qvf1da6g {
  border-radius: var(--_1isshxfe);
}
._1qvf1da6k {
  gap: var(--_1isshxf0);
}
._1qvf1da6o {
  gap: var(--_1isshxf1);
}
._1qvf1da6s {
  gap: var(--_1isshxf2);
}
._1qvf1da6w {
  gap: var(--_1isshxf3);
}
._1qvf1da70 {
  gap: var(--_1isshxf4);
}
._1qvf1da74 {
  gap: var(--_1isshxf5);
}
._1qvf1da78 {
  gap: var(--_1isshxf6);
}
._1qvf1da7c {
  gap: var(--_1isshxf7);
}
._1qvf1da7g {
  gap: var(--_1isshxf8);
}
._1qvf1da7k {
  gap: 0;
}
._1qvf1da7o {
  padding-top: var(--_1isshxf0);
}
._1qvf1da7s {
  padding-top: var(--_1isshxf1);
}
._1qvf1da7w {
  padding-top: var(--_1isshxf2);
}
._1qvf1da80 {
  padding-top: var(--_1isshxf3);
}
._1qvf1da84 {
  padding-top: var(--_1isshxf4);
}
._1qvf1da88 {
  padding-top: var(--_1isshxf5);
}
._1qvf1da8c {
  padding-top: var(--_1isshxf6);
}
._1qvf1da8g {
  padding-top: var(--_1isshxf7);
}
._1qvf1da8k {
  padding-top: var(--_1isshxf8);
}
._1qvf1da8o {
  padding-top: 0;
}
._1qvf1da8s {
  padding-bottom: var(--_1isshxf0);
}
._1qvf1da8w {
  padding-bottom: var(--_1isshxf1);
}
._1qvf1da90 {
  padding-bottom: var(--_1isshxf2);
}
._1qvf1da94 {
  padding-bottom: var(--_1isshxf3);
}
._1qvf1da98 {
  padding-bottom: var(--_1isshxf4);
}
._1qvf1da9c {
  padding-bottom: var(--_1isshxf5);
}
._1qvf1da9g {
  padding-bottom: var(--_1isshxf6);
}
._1qvf1da9k {
  padding-bottom: var(--_1isshxf7);
}
._1qvf1da9o {
  padding-bottom: var(--_1isshxf8);
}
._1qvf1da9s {
  padding-bottom: 0;
}
._1qvf1da9w {
  padding-right: var(--_1isshxf0);
}
._1qvf1daa0 {
  padding-right: var(--_1isshxf1);
}
._1qvf1daa4 {
  padding-right: var(--_1isshxf2);
}
._1qvf1daa8 {
  padding-right: var(--_1isshxf3);
}
._1qvf1daac {
  padding-right: var(--_1isshxf4);
}
._1qvf1daag {
  padding-right: var(--_1isshxf5);
}
._1qvf1daak {
  padding-right: var(--_1isshxf6);
}
._1qvf1daao {
  padding-right: var(--_1isshxf7);
}
._1qvf1daas {
  padding-right: var(--_1isshxf8);
}
._1qvf1daaw {
  padding-right: 0;
}
._1qvf1dab0 {
  padding-left: var(--_1isshxf0);
}
._1qvf1dab4 {
  padding-left: var(--_1isshxf1);
}
._1qvf1dab8 {
  padding-left: var(--_1isshxf2);
}
._1qvf1dabc {
  padding-left: var(--_1isshxf3);
}
._1qvf1dabg {
  padding-left: var(--_1isshxf4);
}
._1qvf1dabk {
  padding-left: var(--_1isshxf5);
}
._1qvf1dabo {
  padding-left: var(--_1isshxf6);
}
._1qvf1dabs {
  padding-left: var(--_1isshxf7);
}
._1qvf1dabw {
  padding-left: var(--_1isshxf8);
}
._1qvf1dac0 {
  padding-left: 0;
}
._1qvf1dac4 {
  margin-top: var(--_1isshxf0);
}
._1qvf1dac8 {
  margin-top: var(--_1isshxf1);
}
._1qvf1dacc {
  margin-top: var(--_1isshxf2);
}
._1qvf1dacg {
  margin-top: var(--_1isshxf3);
}
._1qvf1dack {
  margin-top: var(--_1isshxf4);
}
._1qvf1daco {
  margin-top: var(--_1isshxf5);
}
._1qvf1dacs {
  margin-top: var(--_1isshxf6);
}
._1qvf1dacw {
  margin-top: var(--_1isshxf7);
}
._1qvf1dad0 {
  margin-top: var(--_1isshxf8);
}
._1qvf1dad4 {
  margin-top: 0;
}
._1qvf1dad8 {
  margin-bottom: var(--_1isshxf0);
}
._1qvf1dadc {
  margin-bottom: var(--_1isshxf1);
}
._1qvf1dadg {
  margin-bottom: var(--_1isshxf2);
}
._1qvf1dadk {
  margin-bottom: var(--_1isshxf3);
}
._1qvf1dado {
  margin-bottom: var(--_1isshxf4);
}
._1qvf1dads {
  margin-bottom: var(--_1isshxf5);
}
._1qvf1dadw {
  margin-bottom: var(--_1isshxf6);
}
._1qvf1dae0 {
  margin-bottom: var(--_1isshxf7);
}
._1qvf1dae4 {
  margin-bottom: var(--_1isshxf8);
}
._1qvf1dae8 {
  margin-bottom: 0;
}
._1qvf1daec {
  margin-right: var(--_1isshxf0);
}
._1qvf1daeg {
  margin-right: var(--_1isshxf1);
}
._1qvf1daek {
  margin-right: var(--_1isshxf2);
}
._1qvf1daeo {
  margin-right: var(--_1isshxf3);
}
._1qvf1daes {
  margin-right: var(--_1isshxf4);
}
._1qvf1daew {
  margin-right: var(--_1isshxf5);
}
._1qvf1daf0 {
  margin-right: var(--_1isshxf6);
}
._1qvf1daf4 {
  margin-right: var(--_1isshxf7);
}
._1qvf1daf8 {
  margin-right: var(--_1isshxf8);
}
._1qvf1dafc {
  margin-right: 0;
}
._1qvf1dafg {
  margin-left: var(--_1isshxf0);
}
._1qvf1dafk {
  margin-left: var(--_1isshxf1);
}
._1qvf1dafo {
  margin-left: var(--_1isshxf2);
}
._1qvf1dafs {
  margin-left: var(--_1isshxf3);
}
._1qvf1dafw {
  margin-left: var(--_1isshxf4);
}
._1qvf1dag0 {
  margin-left: var(--_1isshxf5);
}
._1qvf1dag4 {
  margin-left: var(--_1isshxf6);
}
._1qvf1dag8 {
  margin-left: var(--_1isshxf7);
}
._1qvf1dagc {
  margin-left: var(--_1isshxf8);
}
._1qvf1dagg {
  margin-left: 0;
}
._1qvf1dagk {
  align-items: flex-start;
}
._1qvf1dago {
  align-items: center;
}
._1qvf1dags {
  align-items: flex-end;
}
._1qvf1dagw {
  justify-content: flex-start;
}
._1qvf1dah0 {
  justify-content: center;
}
._1qvf1dah4 {
  justify-content: flex-end;
}
._1qvf1dah8 {
  justify-content: space-between;
}
._1qvf1dahc {
  flex-direction: row;
}
._1qvf1dahg {
  flex-direction: row-reverse;
}
._1qvf1dahk {
  flex-direction: column;
}
._1qvf1daho {
  flex-direction: column-reverse;
}
._1qvf1dahs {
  flex-wrap: wrap;
}
._1qvf1dahw {
  flex-wrap: nowrap;
}
._1qvf1dai0 {
  flex-shrink: 0;
}
._1qvf1dai4 {
  flex-grow: 0;
}
._1qvf1dai8 {
  flex-grow: 1;
}
._1qvf1daic {
  text-align: left;
}
._1qvf1daig {
  text-align: center;
}
._1qvf1daik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1qvf1da4x {
    display: none;
  }
  ._1qvf1da51 {
    display: block;
  }
  ._1qvf1da55 {
    display: inline;
  }
  ._1qvf1da59 {
    display: inline-block;
  }
  ._1qvf1da5d {
    display: flex;
  }
  ._1qvf1da5h {
    position: relative;
  }
  ._1qvf1da5l {
    position: absolute;
  }
  ._1qvf1da5p {
    position: fixed;
  }
  ._1qvf1da5t {
    position: sticky;
  }
  ._1qvf1da5x {
    border-radius: 0;
  }
  ._1qvf1da61 {
    border-radius: 9999px;
  }
  ._1qvf1da65 {
    border-radius: var(--_1isshxfb);
  }
  ._1qvf1da69 {
    border-radius: var(--_1isshxfc);
  }
  ._1qvf1da6d {
    border-radius: var(--_1isshxfd);
  }
  ._1qvf1da6h {
    border-radius: var(--_1isshxfe);
  }
  ._1qvf1da6l {
    gap: var(--_1isshxf0);
  }
  ._1qvf1da6p {
    gap: var(--_1isshxf1);
  }
  ._1qvf1da6t {
    gap: var(--_1isshxf2);
  }
  ._1qvf1da6x {
    gap: var(--_1isshxf3);
  }
  ._1qvf1da71 {
    gap: var(--_1isshxf4);
  }
  ._1qvf1da75 {
    gap: var(--_1isshxf5);
  }
  ._1qvf1da79 {
    gap: var(--_1isshxf6);
  }
  ._1qvf1da7d {
    gap: var(--_1isshxf7);
  }
  ._1qvf1da7h {
    gap: var(--_1isshxf8);
  }
  ._1qvf1da7l {
    gap: 0;
  }
  ._1qvf1da7p {
    padding-top: var(--_1isshxf0);
  }
  ._1qvf1da7t {
    padding-top: var(--_1isshxf1);
  }
  ._1qvf1da7x {
    padding-top: var(--_1isshxf2);
  }
  ._1qvf1da81 {
    padding-top: var(--_1isshxf3);
  }
  ._1qvf1da85 {
    padding-top: var(--_1isshxf4);
  }
  ._1qvf1da89 {
    padding-top: var(--_1isshxf5);
  }
  ._1qvf1da8d {
    padding-top: var(--_1isshxf6);
  }
  ._1qvf1da8h {
    padding-top: var(--_1isshxf7);
  }
  ._1qvf1da8l {
    padding-top: var(--_1isshxf8);
  }
  ._1qvf1da8p {
    padding-top: 0;
  }
  ._1qvf1da8t {
    padding-bottom: var(--_1isshxf0);
  }
  ._1qvf1da8x {
    padding-bottom: var(--_1isshxf1);
  }
  ._1qvf1da91 {
    padding-bottom: var(--_1isshxf2);
  }
  ._1qvf1da95 {
    padding-bottom: var(--_1isshxf3);
  }
  ._1qvf1da99 {
    padding-bottom: var(--_1isshxf4);
  }
  ._1qvf1da9d {
    padding-bottom: var(--_1isshxf5);
  }
  ._1qvf1da9h {
    padding-bottom: var(--_1isshxf6);
  }
  ._1qvf1da9l {
    padding-bottom: var(--_1isshxf7);
  }
  ._1qvf1da9p {
    padding-bottom: var(--_1isshxf8);
  }
  ._1qvf1da9t {
    padding-bottom: 0;
  }
  ._1qvf1da9x {
    padding-right: var(--_1isshxf0);
  }
  ._1qvf1daa1 {
    padding-right: var(--_1isshxf1);
  }
  ._1qvf1daa5 {
    padding-right: var(--_1isshxf2);
  }
  ._1qvf1daa9 {
    padding-right: var(--_1isshxf3);
  }
  ._1qvf1daad {
    padding-right: var(--_1isshxf4);
  }
  ._1qvf1daah {
    padding-right: var(--_1isshxf5);
  }
  ._1qvf1daal {
    padding-right: var(--_1isshxf6);
  }
  ._1qvf1daap {
    padding-right: var(--_1isshxf7);
  }
  ._1qvf1daat {
    padding-right: var(--_1isshxf8);
  }
  ._1qvf1daax {
    padding-right: 0;
  }
  ._1qvf1dab1 {
    padding-left: var(--_1isshxf0);
  }
  ._1qvf1dab5 {
    padding-left: var(--_1isshxf1);
  }
  ._1qvf1dab9 {
    padding-left: var(--_1isshxf2);
  }
  ._1qvf1dabd {
    padding-left: var(--_1isshxf3);
  }
  ._1qvf1dabh {
    padding-left: var(--_1isshxf4);
  }
  ._1qvf1dabl {
    padding-left: var(--_1isshxf5);
  }
  ._1qvf1dabp {
    padding-left: var(--_1isshxf6);
  }
  ._1qvf1dabt {
    padding-left: var(--_1isshxf7);
  }
  ._1qvf1dabx {
    padding-left: var(--_1isshxf8);
  }
  ._1qvf1dac1 {
    padding-left: 0;
  }
  ._1qvf1dac5 {
    margin-top: var(--_1isshxf0);
  }
  ._1qvf1dac9 {
    margin-top: var(--_1isshxf1);
  }
  ._1qvf1dacd {
    margin-top: var(--_1isshxf2);
  }
  ._1qvf1dach {
    margin-top: var(--_1isshxf3);
  }
  ._1qvf1dacl {
    margin-top: var(--_1isshxf4);
  }
  ._1qvf1dacp {
    margin-top: var(--_1isshxf5);
  }
  ._1qvf1dact {
    margin-top: var(--_1isshxf6);
  }
  ._1qvf1dacx {
    margin-top: var(--_1isshxf7);
  }
  ._1qvf1dad1 {
    margin-top: var(--_1isshxf8);
  }
  ._1qvf1dad5 {
    margin-top: 0;
  }
  ._1qvf1dad9 {
    margin-bottom: var(--_1isshxf0);
  }
  ._1qvf1dadd {
    margin-bottom: var(--_1isshxf1);
  }
  ._1qvf1dadh {
    margin-bottom: var(--_1isshxf2);
  }
  ._1qvf1dadl {
    margin-bottom: var(--_1isshxf3);
  }
  ._1qvf1dadp {
    margin-bottom: var(--_1isshxf4);
  }
  ._1qvf1dadt {
    margin-bottom: var(--_1isshxf5);
  }
  ._1qvf1dadx {
    margin-bottom: var(--_1isshxf6);
  }
  ._1qvf1dae1 {
    margin-bottom: var(--_1isshxf7);
  }
  ._1qvf1dae5 {
    margin-bottom: var(--_1isshxf8);
  }
  ._1qvf1dae9 {
    margin-bottom: 0;
  }
  ._1qvf1daed {
    margin-right: var(--_1isshxf0);
  }
  ._1qvf1daeh {
    margin-right: var(--_1isshxf1);
  }
  ._1qvf1dael {
    margin-right: var(--_1isshxf2);
  }
  ._1qvf1daep {
    margin-right: var(--_1isshxf3);
  }
  ._1qvf1daet {
    margin-right: var(--_1isshxf4);
  }
  ._1qvf1daex {
    margin-right: var(--_1isshxf5);
  }
  ._1qvf1daf1 {
    margin-right: var(--_1isshxf6);
  }
  ._1qvf1daf5 {
    margin-right: var(--_1isshxf7);
  }
  ._1qvf1daf9 {
    margin-right: var(--_1isshxf8);
  }
  ._1qvf1dafd {
    margin-right: 0;
  }
  ._1qvf1dafh {
    margin-left: var(--_1isshxf0);
  }
  ._1qvf1dafl {
    margin-left: var(--_1isshxf1);
  }
  ._1qvf1dafp {
    margin-left: var(--_1isshxf2);
  }
  ._1qvf1daft {
    margin-left: var(--_1isshxf3);
  }
  ._1qvf1dafx {
    margin-left: var(--_1isshxf4);
  }
  ._1qvf1dag1 {
    margin-left: var(--_1isshxf5);
  }
  ._1qvf1dag5 {
    margin-left: var(--_1isshxf6);
  }
  ._1qvf1dag9 {
    margin-left: var(--_1isshxf7);
  }
  ._1qvf1dagd {
    margin-left: var(--_1isshxf8);
  }
  ._1qvf1dagh {
    margin-left: 0;
  }
  ._1qvf1dagl {
    align-items: flex-start;
  }
  ._1qvf1dagp {
    align-items: center;
  }
  ._1qvf1dagt {
    align-items: flex-end;
  }
  ._1qvf1dagx {
    justify-content: flex-start;
  }
  ._1qvf1dah1 {
    justify-content: center;
  }
  ._1qvf1dah5 {
    justify-content: flex-end;
  }
  ._1qvf1dah9 {
    justify-content: space-between;
  }
  ._1qvf1dahd {
    flex-direction: row;
  }
  ._1qvf1dahh {
    flex-direction: row-reverse;
  }
  ._1qvf1dahl {
    flex-direction: column;
  }
  ._1qvf1dahp {
    flex-direction: column-reverse;
  }
  ._1qvf1daht {
    flex-wrap: wrap;
  }
  ._1qvf1dahx {
    flex-wrap: nowrap;
  }
  ._1qvf1dai1 {
    flex-shrink: 0;
  }
  ._1qvf1dai5 {
    flex-grow: 0;
  }
  ._1qvf1dai9 {
    flex-grow: 1;
  }
  ._1qvf1daid {
    text-align: left;
  }
  ._1qvf1daih {
    text-align: center;
  }
  ._1qvf1dail {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1qvf1da4y {
    display: none;
  }
  ._1qvf1da52 {
    display: block;
  }
  ._1qvf1da56 {
    display: inline;
  }
  ._1qvf1da5a {
    display: inline-block;
  }
  ._1qvf1da5e {
    display: flex;
  }
  ._1qvf1da5i {
    position: relative;
  }
  ._1qvf1da5m {
    position: absolute;
  }
  ._1qvf1da5q {
    position: fixed;
  }
  ._1qvf1da5u {
    position: sticky;
  }
  ._1qvf1da5y {
    border-radius: 0;
  }
  ._1qvf1da62 {
    border-radius: 9999px;
  }
  ._1qvf1da66 {
    border-radius: var(--_1isshxfb);
  }
  ._1qvf1da6a {
    border-radius: var(--_1isshxfc);
  }
  ._1qvf1da6e {
    border-radius: var(--_1isshxfd);
  }
  ._1qvf1da6i {
    border-radius: var(--_1isshxfe);
  }
  ._1qvf1da6m {
    gap: var(--_1isshxf0);
  }
  ._1qvf1da6q {
    gap: var(--_1isshxf1);
  }
  ._1qvf1da6u {
    gap: var(--_1isshxf2);
  }
  ._1qvf1da6y {
    gap: var(--_1isshxf3);
  }
  ._1qvf1da72 {
    gap: var(--_1isshxf4);
  }
  ._1qvf1da76 {
    gap: var(--_1isshxf5);
  }
  ._1qvf1da7a {
    gap: var(--_1isshxf6);
  }
  ._1qvf1da7e {
    gap: var(--_1isshxf7);
  }
  ._1qvf1da7i {
    gap: var(--_1isshxf8);
  }
  ._1qvf1da7m {
    gap: 0;
  }
  ._1qvf1da7q {
    padding-top: var(--_1isshxf0);
  }
  ._1qvf1da7u {
    padding-top: var(--_1isshxf1);
  }
  ._1qvf1da7y {
    padding-top: var(--_1isshxf2);
  }
  ._1qvf1da82 {
    padding-top: var(--_1isshxf3);
  }
  ._1qvf1da86 {
    padding-top: var(--_1isshxf4);
  }
  ._1qvf1da8a {
    padding-top: var(--_1isshxf5);
  }
  ._1qvf1da8e {
    padding-top: var(--_1isshxf6);
  }
  ._1qvf1da8i {
    padding-top: var(--_1isshxf7);
  }
  ._1qvf1da8m {
    padding-top: var(--_1isshxf8);
  }
  ._1qvf1da8q {
    padding-top: 0;
  }
  ._1qvf1da8u {
    padding-bottom: var(--_1isshxf0);
  }
  ._1qvf1da8y {
    padding-bottom: var(--_1isshxf1);
  }
  ._1qvf1da92 {
    padding-bottom: var(--_1isshxf2);
  }
  ._1qvf1da96 {
    padding-bottom: var(--_1isshxf3);
  }
  ._1qvf1da9a {
    padding-bottom: var(--_1isshxf4);
  }
  ._1qvf1da9e {
    padding-bottom: var(--_1isshxf5);
  }
  ._1qvf1da9i {
    padding-bottom: var(--_1isshxf6);
  }
  ._1qvf1da9m {
    padding-bottom: var(--_1isshxf7);
  }
  ._1qvf1da9q {
    padding-bottom: var(--_1isshxf8);
  }
  ._1qvf1da9u {
    padding-bottom: 0;
  }
  ._1qvf1da9y {
    padding-right: var(--_1isshxf0);
  }
  ._1qvf1daa2 {
    padding-right: var(--_1isshxf1);
  }
  ._1qvf1daa6 {
    padding-right: var(--_1isshxf2);
  }
  ._1qvf1daaa {
    padding-right: var(--_1isshxf3);
  }
  ._1qvf1daae {
    padding-right: var(--_1isshxf4);
  }
  ._1qvf1daai {
    padding-right: var(--_1isshxf5);
  }
  ._1qvf1daam {
    padding-right: var(--_1isshxf6);
  }
  ._1qvf1daaq {
    padding-right: var(--_1isshxf7);
  }
  ._1qvf1daau {
    padding-right: var(--_1isshxf8);
  }
  ._1qvf1daay {
    padding-right: 0;
  }
  ._1qvf1dab2 {
    padding-left: var(--_1isshxf0);
  }
  ._1qvf1dab6 {
    padding-left: var(--_1isshxf1);
  }
  ._1qvf1daba {
    padding-left: var(--_1isshxf2);
  }
  ._1qvf1dabe {
    padding-left: var(--_1isshxf3);
  }
  ._1qvf1dabi {
    padding-left: var(--_1isshxf4);
  }
  ._1qvf1dabm {
    padding-left: var(--_1isshxf5);
  }
  ._1qvf1dabq {
    padding-left: var(--_1isshxf6);
  }
  ._1qvf1dabu {
    padding-left: var(--_1isshxf7);
  }
  ._1qvf1daby {
    padding-left: var(--_1isshxf8);
  }
  ._1qvf1dac2 {
    padding-left: 0;
  }
  ._1qvf1dac6 {
    margin-top: var(--_1isshxf0);
  }
  ._1qvf1daca {
    margin-top: var(--_1isshxf1);
  }
  ._1qvf1dace {
    margin-top: var(--_1isshxf2);
  }
  ._1qvf1daci {
    margin-top: var(--_1isshxf3);
  }
  ._1qvf1dacm {
    margin-top: var(--_1isshxf4);
  }
  ._1qvf1dacq {
    margin-top: var(--_1isshxf5);
  }
  ._1qvf1dacu {
    margin-top: var(--_1isshxf6);
  }
  ._1qvf1dacy {
    margin-top: var(--_1isshxf7);
  }
  ._1qvf1dad2 {
    margin-top: var(--_1isshxf8);
  }
  ._1qvf1dad6 {
    margin-top: 0;
  }
  ._1qvf1dada {
    margin-bottom: var(--_1isshxf0);
  }
  ._1qvf1dade {
    margin-bottom: var(--_1isshxf1);
  }
  ._1qvf1dadi {
    margin-bottom: var(--_1isshxf2);
  }
  ._1qvf1dadm {
    margin-bottom: var(--_1isshxf3);
  }
  ._1qvf1dadq {
    margin-bottom: var(--_1isshxf4);
  }
  ._1qvf1dadu {
    margin-bottom: var(--_1isshxf5);
  }
  ._1qvf1dady {
    margin-bottom: var(--_1isshxf6);
  }
  ._1qvf1dae2 {
    margin-bottom: var(--_1isshxf7);
  }
  ._1qvf1dae6 {
    margin-bottom: var(--_1isshxf8);
  }
  ._1qvf1daea {
    margin-bottom: 0;
  }
  ._1qvf1daee {
    margin-right: var(--_1isshxf0);
  }
  ._1qvf1daei {
    margin-right: var(--_1isshxf1);
  }
  ._1qvf1daem {
    margin-right: var(--_1isshxf2);
  }
  ._1qvf1daeq {
    margin-right: var(--_1isshxf3);
  }
  ._1qvf1daeu {
    margin-right: var(--_1isshxf4);
  }
  ._1qvf1daey {
    margin-right: var(--_1isshxf5);
  }
  ._1qvf1daf2 {
    margin-right: var(--_1isshxf6);
  }
  ._1qvf1daf6 {
    margin-right: var(--_1isshxf7);
  }
  ._1qvf1dafa {
    margin-right: var(--_1isshxf8);
  }
  ._1qvf1dafe {
    margin-right: 0;
  }
  ._1qvf1dafi {
    margin-left: var(--_1isshxf0);
  }
  ._1qvf1dafm {
    margin-left: var(--_1isshxf1);
  }
  ._1qvf1dafq {
    margin-left: var(--_1isshxf2);
  }
  ._1qvf1dafu {
    margin-left: var(--_1isshxf3);
  }
  ._1qvf1dafy {
    margin-left: var(--_1isshxf4);
  }
  ._1qvf1dag2 {
    margin-left: var(--_1isshxf5);
  }
  ._1qvf1dag6 {
    margin-left: var(--_1isshxf6);
  }
  ._1qvf1daga {
    margin-left: var(--_1isshxf7);
  }
  ._1qvf1dage {
    margin-left: var(--_1isshxf8);
  }
  ._1qvf1dagi {
    margin-left: 0;
  }
  ._1qvf1dagm {
    align-items: flex-start;
  }
  ._1qvf1dagq {
    align-items: center;
  }
  ._1qvf1dagu {
    align-items: flex-end;
  }
  ._1qvf1dagy {
    justify-content: flex-start;
  }
  ._1qvf1dah2 {
    justify-content: center;
  }
  ._1qvf1dah6 {
    justify-content: flex-end;
  }
  ._1qvf1daha {
    justify-content: space-between;
  }
  ._1qvf1dahe {
    flex-direction: row;
  }
  ._1qvf1dahi {
    flex-direction: row-reverse;
  }
  ._1qvf1dahm {
    flex-direction: column;
  }
  ._1qvf1dahq {
    flex-direction: column-reverse;
  }
  ._1qvf1dahu {
    flex-wrap: wrap;
  }
  ._1qvf1dahy {
    flex-wrap: nowrap;
  }
  ._1qvf1dai2 {
    flex-shrink: 0;
  }
  ._1qvf1dai6 {
    flex-grow: 0;
  }
  ._1qvf1daia {
    flex-grow: 1;
  }
  ._1qvf1daie {
    text-align: left;
  }
  ._1qvf1daii {
    text-align: center;
  }
  ._1qvf1daim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1qvf1da4z {
    display: none;
  }
  ._1qvf1da53 {
    display: block;
  }
  ._1qvf1da57 {
    display: inline;
  }
  ._1qvf1da5b {
    display: inline-block;
  }
  ._1qvf1da5f {
    display: flex;
  }
  ._1qvf1da5j {
    position: relative;
  }
  ._1qvf1da5n {
    position: absolute;
  }
  ._1qvf1da5r {
    position: fixed;
  }
  ._1qvf1da5v {
    position: sticky;
  }
  ._1qvf1da5z {
    border-radius: 0;
  }
  ._1qvf1da63 {
    border-radius: 9999px;
  }
  ._1qvf1da67 {
    border-radius: var(--_1isshxfb);
  }
  ._1qvf1da6b {
    border-radius: var(--_1isshxfc);
  }
  ._1qvf1da6f {
    border-radius: var(--_1isshxfd);
  }
  ._1qvf1da6j {
    border-radius: var(--_1isshxfe);
  }
  ._1qvf1da6n {
    gap: var(--_1isshxf0);
  }
  ._1qvf1da6r {
    gap: var(--_1isshxf1);
  }
  ._1qvf1da6v {
    gap: var(--_1isshxf2);
  }
  ._1qvf1da6z {
    gap: var(--_1isshxf3);
  }
  ._1qvf1da73 {
    gap: var(--_1isshxf4);
  }
  ._1qvf1da77 {
    gap: var(--_1isshxf5);
  }
  ._1qvf1da7b {
    gap: var(--_1isshxf6);
  }
  ._1qvf1da7f {
    gap: var(--_1isshxf7);
  }
  ._1qvf1da7j {
    gap: var(--_1isshxf8);
  }
  ._1qvf1da7n {
    gap: 0;
  }
  ._1qvf1da7r {
    padding-top: var(--_1isshxf0);
  }
  ._1qvf1da7v {
    padding-top: var(--_1isshxf1);
  }
  ._1qvf1da7z {
    padding-top: var(--_1isshxf2);
  }
  ._1qvf1da83 {
    padding-top: var(--_1isshxf3);
  }
  ._1qvf1da87 {
    padding-top: var(--_1isshxf4);
  }
  ._1qvf1da8b {
    padding-top: var(--_1isshxf5);
  }
  ._1qvf1da8f {
    padding-top: var(--_1isshxf6);
  }
  ._1qvf1da8j {
    padding-top: var(--_1isshxf7);
  }
  ._1qvf1da8n {
    padding-top: var(--_1isshxf8);
  }
  ._1qvf1da8r {
    padding-top: 0;
  }
  ._1qvf1da8v {
    padding-bottom: var(--_1isshxf0);
  }
  ._1qvf1da8z {
    padding-bottom: var(--_1isshxf1);
  }
  ._1qvf1da93 {
    padding-bottom: var(--_1isshxf2);
  }
  ._1qvf1da97 {
    padding-bottom: var(--_1isshxf3);
  }
  ._1qvf1da9b {
    padding-bottom: var(--_1isshxf4);
  }
  ._1qvf1da9f {
    padding-bottom: var(--_1isshxf5);
  }
  ._1qvf1da9j {
    padding-bottom: var(--_1isshxf6);
  }
  ._1qvf1da9n {
    padding-bottom: var(--_1isshxf7);
  }
  ._1qvf1da9r {
    padding-bottom: var(--_1isshxf8);
  }
  ._1qvf1da9v {
    padding-bottom: 0;
  }
  ._1qvf1da9z {
    padding-right: var(--_1isshxf0);
  }
  ._1qvf1daa3 {
    padding-right: var(--_1isshxf1);
  }
  ._1qvf1daa7 {
    padding-right: var(--_1isshxf2);
  }
  ._1qvf1daab {
    padding-right: var(--_1isshxf3);
  }
  ._1qvf1daaf {
    padding-right: var(--_1isshxf4);
  }
  ._1qvf1daaj {
    padding-right: var(--_1isshxf5);
  }
  ._1qvf1daan {
    padding-right: var(--_1isshxf6);
  }
  ._1qvf1daar {
    padding-right: var(--_1isshxf7);
  }
  ._1qvf1daav {
    padding-right: var(--_1isshxf8);
  }
  ._1qvf1daaz {
    padding-right: 0;
  }
  ._1qvf1dab3 {
    padding-left: var(--_1isshxf0);
  }
  ._1qvf1dab7 {
    padding-left: var(--_1isshxf1);
  }
  ._1qvf1dabb {
    padding-left: var(--_1isshxf2);
  }
  ._1qvf1dabf {
    padding-left: var(--_1isshxf3);
  }
  ._1qvf1dabj {
    padding-left: var(--_1isshxf4);
  }
  ._1qvf1dabn {
    padding-left: var(--_1isshxf5);
  }
  ._1qvf1dabr {
    padding-left: var(--_1isshxf6);
  }
  ._1qvf1dabv {
    padding-left: var(--_1isshxf7);
  }
  ._1qvf1dabz {
    padding-left: var(--_1isshxf8);
  }
  ._1qvf1dac3 {
    padding-left: 0;
  }
  ._1qvf1dac7 {
    margin-top: var(--_1isshxf0);
  }
  ._1qvf1dacb {
    margin-top: var(--_1isshxf1);
  }
  ._1qvf1dacf {
    margin-top: var(--_1isshxf2);
  }
  ._1qvf1dacj {
    margin-top: var(--_1isshxf3);
  }
  ._1qvf1dacn {
    margin-top: var(--_1isshxf4);
  }
  ._1qvf1dacr {
    margin-top: var(--_1isshxf5);
  }
  ._1qvf1dacv {
    margin-top: var(--_1isshxf6);
  }
  ._1qvf1dacz {
    margin-top: var(--_1isshxf7);
  }
  ._1qvf1dad3 {
    margin-top: var(--_1isshxf8);
  }
  ._1qvf1dad7 {
    margin-top: 0;
  }
  ._1qvf1dadb {
    margin-bottom: var(--_1isshxf0);
  }
  ._1qvf1dadf {
    margin-bottom: var(--_1isshxf1);
  }
  ._1qvf1dadj {
    margin-bottom: var(--_1isshxf2);
  }
  ._1qvf1dadn {
    margin-bottom: var(--_1isshxf3);
  }
  ._1qvf1dadr {
    margin-bottom: var(--_1isshxf4);
  }
  ._1qvf1dadv {
    margin-bottom: var(--_1isshxf5);
  }
  ._1qvf1dadz {
    margin-bottom: var(--_1isshxf6);
  }
  ._1qvf1dae3 {
    margin-bottom: var(--_1isshxf7);
  }
  ._1qvf1dae7 {
    margin-bottom: var(--_1isshxf8);
  }
  ._1qvf1daeb {
    margin-bottom: 0;
  }
  ._1qvf1daef {
    margin-right: var(--_1isshxf0);
  }
  ._1qvf1daej {
    margin-right: var(--_1isshxf1);
  }
  ._1qvf1daen {
    margin-right: var(--_1isshxf2);
  }
  ._1qvf1daer {
    margin-right: var(--_1isshxf3);
  }
  ._1qvf1daev {
    margin-right: var(--_1isshxf4);
  }
  ._1qvf1daez {
    margin-right: var(--_1isshxf5);
  }
  ._1qvf1daf3 {
    margin-right: var(--_1isshxf6);
  }
  ._1qvf1daf7 {
    margin-right: var(--_1isshxf7);
  }
  ._1qvf1dafb {
    margin-right: var(--_1isshxf8);
  }
  ._1qvf1daff {
    margin-right: 0;
  }
  ._1qvf1dafj {
    margin-left: var(--_1isshxf0);
  }
  ._1qvf1dafn {
    margin-left: var(--_1isshxf1);
  }
  ._1qvf1dafr {
    margin-left: var(--_1isshxf2);
  }
  ._1qvf1dafv {
    margin-left: var(--_1isshxf3);
  }
  ._1qvf1dafz {
    margin-left: var(--_1isshxf4);
  }
  ._1qvf1dag3 {
    margin-left: var(--_1isshxf5);
  }
  ._1qvf1dag7 {
    margin-left: var(--_1isshxf6);
  }
  ._1qvf1dagb {
    margin-left: var(--_1isshxf7);
  }
  ._1qvf1dagf {
    margin-left: var(--_1isshxf8);
  }
  ._1qvf1dagj {
    margin-left: 0;
  }
  ._1qvf1dagn {
    align-items: flex-start;
  }
  ._1qvf1dagr {
    align-items: center;
  }
  ._1qvf1dagv {
    align-items: flex-end;
  }
  ._1qvf1dagz {
    justify-content: flex-start;
  }
  ._1qvf1dah3 {
    justify-content: center;
  }
  ._1qvf1dah7 {
    justify-content: flex-end;
  }
  ._1qvf1dahb {
    justify-content: space-between;
  }
  ._1qvf1dahf {
    flex-direction: row;
  }
  ._1qvf1dahj {
    flex-direction: row-reverse;
  }
  ._1qvf1dahn {
    flex-direction: column;
  }
  ._1qvf1dahr {
    flex-direction: column-reverse;
  }
  ._1qvf1dahv {
    flex-wrap: wrap;
  }
  ._1qvf1dahz {
    flex-wrap: nowrap;
  }
  ._1qvf1dai3 {
    flex-shrink: 0;
  }
  ._1qvf1dai7 {
    flex-grow: 0;
  }
  ._1qvf1daib {
    flex-grow: 1;
  }
  ._1qvf1daif {
    text-align: left;
  }
  ._1qvf1daij {
    text-align: center;
  }
  ._1qvf1dain {
    text-align: right;
  }
}
._1cprxzt0 {
  --_1isshxf0: 24px;
  --_1isshxf1: 8px;
  --_1isshxf2: 12px;
  --_1isshxf3: 16px;
  --_1isshxf4: 24px;
  --_1isshxf5: 32px;
  --_1isshxf6: 48px;
  --_1isshxf7: 64px;
  --_1isshxf8: 96px;
  --_1isshxf9: 48px;
  --_1isshxfa: 4px;
  --_1isshxfb: 4px;
  --_1isshxfc: 8px;
  --_1isshxfd: 16px;
  --_1isshxfe: 24px;
  --_1isshxff: #e60278;
  --_1isshxfg: #f8b1dc;
  --_1isshxfh: #fdc221;
  --_1isshxfi: #fee384;
  --_1isshxfj: #b91e1e;
  --_1isshxfk: #fb999a;
  --_1isshxfl: #838fa5;
  --_1isshxfm: rgba(153, 191, 247, 0.7);
  --_1isshxfn: #1e47a9;
  --_1isshxfo: #99bff7;
  --_1isshxfp: #1d559d;
  --_1isshxfq: #98c9f1;
  --_1isshxfr: #2e3849;
  --_1isshxft: #eaecf1;
  --_1isshxfs: #fff;
  --_1isshxfu: #12784f;
  --_1isshxfv: #8bdec5;
  --_1isshxfw: #7f35a9;
  --_1isshxfx: #e1b2f5;
  --_1isshxfy: 2px;
  --_1isshxfz: 4px;
  --_1isshxf10: 6px;
  --_1isshxf11: 400px;
  --_1isshxf12: 660px;
  --_1isshxf13: 940px;
  --_1isshxf14: 1280px;
  --_1isshxf15: #e60278;
  --_1isshxf16: #f8b1dc;
  --_1isshxf17: #723d02;
  --_1isshxf18: #fee384;
  --_1isshxf19: #b91e1e;
  --_1isshxf1a: #fb999a;
  --_1isshxf1b: #1e47a9;
  --_1isshxf1c: #99bff7;
  --_1isshxf1d: #1d559d;
  --_1isshxf1e: #98c9f1;
  --_1isshxf1f: #2e3849;
  --_1isshxf1h: #fff;
  --_1isshxf1g: #2e3849;
  --_1isshxf1i: #5b2084;
  --_1isshxf1j: #f0d6fa;
  --_1isshxf1k: #2e3849;
  --_1isshxf1l: #fff;
  --_1isshxf1m: #12784f;
  --_1isshxf1n: #8bdec5;
  --_1isshxf1o: #7f35a9;
  --_1isshxf1p: #e1b2f5;
  --_1isshxf1q: #e60278;
  --_1isshxf1r: #5a6881;
  --_1isshxf1s: hsla(0, 0%, 100%, 0.65);
  --_1isshxf1t: #fff;
  --_1isshxf1u: #1c2330;
  --_1isshxf1v: #051a49;
  --_1isshxf1w: #e60278;
  --_1isshxf1x: #cd026b;
  --_1isshxf1y: #fd0585;
  --_1isshxf1z: #feeffa;
  --_1isshxf20: #fdd7f3;
  --_1isshxf21: #fde3f6;
  --_1isshxf22: #fdc221;
  --_1isshxf23: #fef8de;
  --_1isshxf24: #b91e1e;
  --_1isshxf25: #a31a1a;
  --_1isshxf26: #db1616;
  --_1isshxf27: #ffe3e2;
  --_1isshxf28: #fef3f3;
  --_1isshxf29: #fcdbdb;
  --_1isshxf2a: #fde7e7;
  --_1isshxf2b: #1e47a9;
  --_1isshxf2c: #1a3e93;
  --_1isshxf2d: #2455c9;
  --_1isshxf2e: #f0f7fe;
  --_1isshxf2f: #d8eafc;
  --_1isshxf2g: #e4f1fd;
  --_1isshxf2h: #1d559d;
  --_1isshxf2i: #e3f2fb;
  --_1isshxf2j: #2e3849;
  --_1isshxf2k: #242c39;
  --_1isshxf2l: #384459;
  --_1isshxf2m: #f3f5f7;
  --_1isshxf2n: #f3f5f7;
  --_1isshxf2o: #e4e8ed;
  --_1isshxf2p: #ebeff2;
  --_1isshxf2q: #12784f;
  --_1isshxf2r: #e2f7f1;
  --_1isshxf2s: #7f35a9;
  --_1isshxf2t: #f9ebfd;
  --_1isshxf2u: #fff;
  --_1isshxf2v: #1c2330;
  --_1isshxf2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1isshxf2x: 783;
  --_1isshxf2y: 1057;
  --_1isshxf2z: -274;
  --_1isshxf30: 0;
  --_1isshxf31: 1000;
  --_1isshxf3w: 18px;
  --_1isshxf3x: 27.094px;
  --_1isshxf3y: 14.094px;
  --_1isshxf3z: -0.3611em;
  --_1isshxf40: -0.3611em;
  --_1isshxf41: 18px;
  --_1isshxf42: 27.094px;
  --_1isshxf43: 14.094px;
  --_1isshxf44: -0.3611em;
  --_1isshxf45: -0.3611em;
  --_1isshxf3m: 16px;
  --_1isshxf3n: 24.528px;
  --_1isshxf3o: 12.528px;
  --_1isshxf3p: -0.375em;
  --_1isshxf3q: -0.375em;
  --_1isshxf3r: 16px;
  --_1isshxf3s: 24.528px;
  --_1isshxf3t: 12.528px;
  --_1isshxf3u: -0.375em;
  --_1isshxf3v: -0.375em;
  --_1isshxf3c: 14px;
  --_1isshxf3d: 20.962px;
  --_1isshxf3e: 10.962px;
  --_1isshxf3f: -0.3571em;
  --_1isshxf3g: -0.3571em;
  --_1isshxf3h: 14px;
  --_1isshxf3i: 20.962px;
  --_1isshxf3j: 10.962px;
  --_1isshxf3k: -0.3571em;
  --_1isshxf3l: -0.3571em;
  --_1isshxf32: 12px;
  --_1isshxf33: 18.396px;
  --_1isshxf34: 9.396px;
  --_1isshxf35: -0.375em;
  --_1isshxf36: -0.375em;
  --_1isshxf37: 12px;
  --_1isshxf38: 18.396px;
  --_1isshxf39: 9.396px;
  --_1isshxf3a: -0.375em;
  --_1isshxf3b: -0.375em;
  --_1isshxf46: 400;
  --_1isshxf47: 600;
  --_1isshxf48: 700;
  --_1isshxf49: 28px;
  --_1isshxf4a: 32.924px;
  --_1isshxf4b: 21.924px;
  --_1isshxf4c: -0.1964em;
  --_1isshxf4d: -0.1964em;
  --_1isshxf4e: 36px;
  --_1isshxf4f: 42.188px;
  --_1isshxf4g: 28.188px;
  --_1isshxf4h: -0.1944em;
  --_1isshxf4i: -0.1944em;
  --_1isshxf4j: 24px;
  --_1isshxf4k: 29.792px;
  --_1isshxf4l: 18.792px;
  --_1isshxf4m: -0.2292em;
  --_1isshxf4n: -0.2292em;
  --_1isshxf4o: 30px;
  --_1isshxf4p: 36.49px;
  --_1isshxf4q: 23.49px;
  --_1isshxf4r: -0.2167em;
  --_1isshxf4s: -0.2167em;
  --_1isshxf4t: 22px;
  --_1isshxf4u: 27.226px;
  --_1isshxf4v: 17.226px;
  --_1isshxf4w: -0.2273em;
  --_1isshxf4x: -0.2273em;
  --_1isshxf4y: 24px;
  --_1isshxf4z: 29.792px;
  --_1isshxf50: 18.792px;
  --_1isshxf51: -0.2292em;
  --_1isshxf52: -0.2292em;
  --_1isshxf53: 20px;
  --_1isshxf54: 24.66px;
  --_1isshxf55: 15.66px;
  --_1isshxf56: -0.225em;
  --_1isshxf57: -0.225em;
  --_1isshxf58: 20px;
  --_1isshxf59: 24.66px;
  --_1isshxf5a: 15.66px;
  --_1isshxf5b: -0.225em;
  --_1isshxf5c: -0.225em;
  --_1isshxf5d: 400;
  --_1isshxf5e: 600;
  --_1isshxf5f: underline;
  --_1isshxf5g: 24px;
  --_1isshxf5h: 20px;
  --_1isshxf5i: transform 0.125s ease, opacity 0.125s ease;
  --_1isshxf5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1isshxf5k: scale(0.95);
  --_1isshxf5l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1isshxf5m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1isshxf5n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
._1b9a5rt0 {
  font-family: var(--_1isshxf2w);
}
._1b9a5rt1 {
  font-weight: var(--_1isshxf46);
}
._1b9a5rt2 {
  font-weight: var(--_1isshxf47);
}
._1b9a5rt3 {
  font-weight: var(--_1isshxf48);
}
._1b9a5rt4 {
  --e739tz0: var(--_1isshxf32);
  --e739tz1: var(--_1isshxf33);
  --e739tz2: var(--_1isshxf35);
  --e739tz3: var(--_1isshxf36);
}
._1b9a5rt6 {
  --e739tz0: var(--_1isshxf3c);
  --e739tz1: var(--_1isshxf3d);
  --e739tz2: var(--_1isshxf3f);
  --e739tz3: var(--_1isshxf3g);
}
._1b9a5rt8 {
  --e739tz0: var(--_1isshxf3m);
  --e739tz1: var(--_1isshxf3n);
  --e739tz2: var(--_1isshxf3p);
  --e739tz3: var(--_1isshxf3q);
}
._1b9a5rta {
  --e739tz0: var(--_1isshxf3w);
  --e739tz1: var(--_1isshxf3x);
  --e739tz2: var(--_1isshxf3z);
  --e739tz3: var(--_1isshxf40);
}
._1b9a5rtc {
  font-size: var(--_1isshxf32);
  line-height: var(--_1isshxf33);
}
._1b9a5rtd {
  font-size: var(--_1isshxf3c);
  line-height: var(--_1isshxf3d);
}
._1b9a5rte {
  font-size: var(--_1isshxf3m);
  line-height: var(--_1isshxf3n);
}
._1b9a5rtf {
  font-size: var(--_1isshxf3w);
  line-height: var(--_1isshxf3x);
}
._1b9a5rtg {
  font-weight: var(--_1isshxf5d);
}
._1b9a5rth {
  font-weight: var(--_1isshxf5e);
}
._1b9a5rti {
  --e739tz0: var(--_1isshxf49);
  --e739tz1: var(--_1isshxf4a);
  --e739tz2: var(--_1isshxf4c);
  --e739tz3: var(--_1isshxf4d);
}
._1b9a5rtk {
  --e739tz0: var(--_1isshxf4j);
  --e739tz1: var(--_1isshxf4k);
  --e739tz2: var(--_1isshxf4m);
  --e739tz3: var(--_1isshxf4n);
}
._1b9a5rtm {
  --e739tz0: var(--_1isshxf4t);
  --e739tz1: var(--_1isshxf4u);
  --e739tz2: var(--_1isshxf4w);
  --e739tz3: var(--_1isshxf4x);
}
._1b9a5rto {
  --e739tz0: var(--_1isshxf53);
  --e739tz1: var(--_1isshxf54);
  --e739tz2: var(--_1isshxf56);
  --e739tz3: var(--_1isshxf57);
}
html:not(._1qvf1da11) ._1b9a5rt10 {
  --_1b9a5rtq: var(--_1isshxf19);
  --_1b9a5rtr: var(--_1isshxf17);
  --_1b9a5rts: var(--_1isshxf1d);
  --_1b9a5rtt: var(--_1isshxf1o);
  --_1b9a5rtu: var(--_1isshxf1m);
  --_1b9a5rtv: var(--_1isshxf15);
  --_1b9a5rtw: var(--_1isshxf1b);
  --_1b9a5rtx: var(--_1isshxf1k);
  --_1b9a5rty: var(--_1isshxf1r);
  --_1b9a5rtz: var(--_1isshxf1f);
}
html:not(._1qvf1da11) ._1b9a5rt11 {
  --_1b9a5rtq: var(--_1isshxf1a);
  --_1b9a5rtr: var(--_1isshxf18);
  --_1b9a5rts: var(--_1isshxf1e);
  --_1b9a5rtt: var(--_1isshxf1p);
  --_1b9a5rtu: var(--_1isshxf1n);
  --_1b9a5rtv: var(--_1isshxf16);
  --_1b9a5rtw: var(--_1isshxf1c);
  --_1b9a5rtx: var(--_1isshxf1l);
  --_1b9a5rty: var(--_1isshxf1s);
  --_1b9a5rtz: var(--_1isshxf1h);
}
html._1qvf1da11 ._1b9a5rt12 {
  --_1b9a5rtq: var(--_1isshxf19);
  --_1b9a5rtr: var(--_1isshxf17);
  --_1b9a5rts: var(--_1isshxf1d);
  --_1b9a5rtt: var(--_1isshxf1o);
  --_1b9a5rtu: var(--_1isshxf1m);
  --_1b9a5rtv: var(--_1isshxf15);
  --_1b9a5rtw: var(--_1isshxf1b);
  --_1b9a5rtx: var(--_1isshxf1k);
  --_1b9a5rty: var(--_1isshxf1r);
  --_1b9a5rtz: var(--_1isshxf1f);
}
html._1qvf1da11 ._1b9a5rt13 {
  --_1b9a5rtq: var(--_1isshxf1a);
  --_1b9a5rtr: var(--_1isshxf18);
  --_1b9a5rts: var(--_1isshxf1e);
  --_1b9a5rtt: var(--_1isshxf1p);
  --_1b9a5rtu: var(--_1isshxf1n);
  --_1b9a5rtv: var(--_1isshxf16);
  --_1b9a5rtw: var(--_1isshxf1c);
  --_1b9a5rtx: var(--_1isshxf1l);
  --_1b9a5rty: var(--_1isshxf1s);
  --_1b9a5rtz: var(--_1isshxf1h);
}
html:not(._1qvf1da11) ._1b9a5rt14,
html:not(._1qvf1da11) ._1b9a5rt15,
html:not(._1qvf1da11) ._1b9a5rt16,
html:not(._1qvf1da11) ._1b9a5rt17 {
  --_1b9a5rtx: var(--_1b9a5rtq);
}
html:not(._1qvf1da11) ._1b9a5rt18,
html:not(._1qvf1da11) ._1b9a5rt19 {
  --_1b9a5rtx: var(--_1b9a5rtr);
}
html:not(._1qvf1da11) ._1b9a5rt1a {
  --_1b9a5rtx: var(--_1b9a5rtu);
}
html:not(._1qvf1da11) ._1b9a5rt1b {
  --_1b9a5rtx: var(--_1b9a5rts);
}
html:not(._1qvf1da11) ._1b9a5rt1c {
  --_1b9a5rtx: var(--_1b9a5rtt);
}
html._1qvf1da11 ._1b9a5rt1d,
html._1qvf1da11 ._1b9a5rt1e,
html._1qvf1da11 ._1b9a5rt1f,
html._1qvf1da11 ._1b9a5rt1g {
  --_1b9a5rtx: var(--_1b9a5rtq);
}
html._1qvf1da11 ._1b9a5rt1h,
html._1qvf1da11 ._1b9a5rt1i {
  --_1b9a5rtx: var(--_1b9a5rtr);
}
html._1qvf1da11 ._1b9a5rt1j {
  --_1b9a5rtx: var(--_1b9a5rtu);
}
html._1qvf1da11 ._1b9a5rt1k {
  --_1b9a5rtx: var(--_1b9a5rts);
}
html._1qvf1da11 ._1b9a5rt1l {
  --_1b9a5rtx: var(--_1b9a5rtt);
}
._1b9a5rt1m {
  color: var(--_1b9a5rtq);
}
._1b9a5rt1n {
  color: var(--_1b9a5rtr);
}
._1b9a5rt1o {
  color: var(--_1b9a5rts);
}
._1b9a5rt1p {
  color: var(--_1b9a5rtt);
}
._1b9a5rt1q {
  color: var(--_1b9a5rtu);
}
._1b9a5rt1r {
  color: var(--_1b9a5rtv);
}
._1b9a5rt1s {
  color: var(--_1b9a5rtw);
}
._1b9a5rt1t {
  color: var(--_1b9a5rtx);
}
._1b9a5rt1u {
  color: var(--_1b9a5rty);
}
._1b9a5rt1v {
  color: var(--_1b9a5rtz);
}
._1b9a5rt1w {
  padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf33)) / 2);
  padding-top: calc((var(--_1isshxf9) - var(--_1isshxf33)) / 2);
}
._1b9a5rt1x {
  padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf3d)) / 2);
  padding-top: calc((var(--_1isshxf9) - var(--_1isshxf3d)) / 2);
}
._1b9a5rt1y {
  padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf3n)) / 2);
  padding-top: calc((var(--_1isshxf9) - var(--_1isshxf3n)) / 2);
}
._1b9a5rt1z {
  padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf3x)) / 2);
  padding-top: calc((var(--_1isshxf9) - var(--_1isshxf3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1b9a5rt4 {
    --e739tz0: var(--_1isshxf37);
    --e739tz1: var(--_1isshxf38);
    --e739tz2: var(--_1isshxf3a);
    --e739tz3: var(--_1isshxf3b);
  }
  ._1b9a5rt6 {
    --e739tz0: var(--_1isshxf3h);
    --e739tz1: var(--_1isshxf3i);
    --e739tz2: var(--_1isshxf3k);
    --e739tz3: var(--_1isshxf3l);
  }
  ._1b9a5rt8 {
    --e739tz0: var(--_1isshxf3r);
    --e739tz1: var(--_1isshxf3s);
    --e739tz2: var(--_1isshxf3u);
    --e739tz3: var(--_1isshxf3v);
  }
  ._1b9a5rta {
    --e739tz0: var(--_1isshxf41);
    --e739tz1: var(--_1isshxf42);
    --e739tz2: var(--_1isshxf44);
    --e739tz3: var(--_1isshxf45);
  }
  ._1b9a5rtc {
    font-size: var(--_1isshxf37);
    line-height: var(--_1isshxf38);
  }
  ._1b9a5rtd {
    font-size: var(--_1isshxf3h);
    line-height: var(--_1isshxf3i);
  }
  ._1b9a5rte {
    font-size: var(--_1isshxf3r);
    line-height: var(--_1isshxf3s);
  }
  ._1b9a5rtf {
    font-size: var(--_1isshxf41);
    line-height: var(--_1isshxf42);
  }
  ._1b9a5rti {
    --e739tz0: var(--_1isshxf4e);
    --e739tz1: var(--_1isshxf4f);
    --e739tz2: var(--_1isshxf4h);
    --e739tz3: var(--_1isshxf4i);
  }
  ._1b9a5rtk {
    --e739tz0: var(--_1isshxf4o);
    --e739tz1: var(--_1isshxf4p);
    --e739tz2: var(--_1isshxf4r);
    --e739tz3: var(--_1isshxf4s);
  }
  ._1b9a5rtm {
    --e739tz0: var(--_1isshxf4y);
    --e739tz1: var(--_1isshxf4z);
    --e739tz2: var(--_1isshxf51);
    --e739tz3: var(--_1isshxf52);
  }
  ._1b9a5rto {
    --e739tz0: var(--_1isshxf58);
    --e739tz1: var(--_1isshxf59);
    --e739tz2: var(--_1isshxf5b);
    --e739tz3: var(--_1isshxf5c);
  }
  ._1b9a5rt1w {
    padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf38)) / 2);
    padding-top: calc((var(--_1isshxf9) - var(--_1isshxf38)) / 2);
  }
  ._1b9a5rt1x {
    padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf3i)) / 2);
    padding-top: calc((var(--_1isshxf9) - var(--_1isshxf3i)) / 2);
  }
  ._1b9a5rt1y {
    padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf3s)) / 2);
    padding-top: calc((var(--_1isshxf9) - var(--_1isshxf3s)) / 2);
  }
  ._1b9a5rt1z {
    padding-bottom: calc((var(--_1isshxf9) - var(--_1isshxf42)) / 2);
    padding-top: calc((var(--_1isshxf9) - var(--_1isshxf42)) / 2);
  }
}
._10a9y076 {
  background: var(--_10a9y070);
}
._10a9y077 {
  background: var(--_10a9y071);
}
._10a9y078 {
  background: var(--_10a9y072);
}
._10a9y079 {
  background: var(--_10a9y073);
}
._10a9y07a {
  background: var(--_10a9y074);
}
._10a9y07b {
  background: var(--_10a9y075);
}
html:not(._1qvf1da11) ._10a9y07c {
  --_10a9y070: var(--_1isshxfw);
  --_10a9y071: var(--_1isshxfp);
  --_10a9y072: var(--_1isshxfu);
  --_10a9y073: var(--_1isshxfh);
  --_10a9y074: var(--_1isshxfj);
  --_10a9y075: var(--_1isshxfn);
}
html:not(._1qvf1da11) ._10a9y07d {
  --_10a9y070: var(--_1isshxfx);
  --_10a9y071: var(--_1isshxfq);
  --_10a9y072: var(--_1isshxfv);
  --_10a9y073: var(--_1isshxfi);
  --_10a9y074: var(--_1isshxfk);
  --_10a9y075: var(--_1isshxfo);
}
html._1qvf1da11 ._10a9y07e {
  --_10a9y070: var(--_1isshxfw);
  --_10a9y071: var(--_1isshxfp);
  --_10a9y072: var(--_1isshxfu);
  --_10a9y073: var(--_1isshxfh);
  --_10a9y074: var(--_1isshxfj);
  --_10a9y075: var(--_1isshxfn);
}
html._1qvf1da11 ._10a9y07f {
  --_10a9y070: var(--_1isshxfx);
  --_10a9y071: var(--_1isshxfq);
  --_10a9y072: var(--_1isshxfv);
  --_10a9y073: var(--_1isshxfi);
  --_10a9y074: var(--_1isshxfk);
  --_10a9y075: var(--_1isshxfo);
}
._10a9y07g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._10a9y07h {
  width: var(--_1isshxfe);
}
._10a9y07i {
  width: var(--_1isshxfa);
}
.vjcuuu0 {
  margin-bottom: -0.1em;
}
.vjcuuu2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.vjcuuu0 .vjcuuu2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .vjcuuu4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--vjcuuu3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__1qvf1da11,html.sprinkles_darkMode__1qvf1da11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1cprxzt0 typography_lightModeTone_light__1b9a5rt10 typography_darkModeTone_dark__1b9a5rt13">
+        <div class="reset_base__1eiowcn0 sprinkles_paddingBottom_gutter_mobile__1qvf1da8s sprinkles_paddingTop_gutter_mobile__1qvf1da7o sprinkles_paddingLeft_gutter_mobile__1qvf1dab0 sprinkles_paddingRight_gutter_mobile__1qvf1da9w sprinkles_position_relative_mobile__1qvf1da5g sprinkles_borderRadius_large_mobile__1qvf1da6c sprinkles_textAlign_left_mobile__1qvf1daic sprinkles_boxShadow_borderNeutralLight_lightMode__1qvf1da4k sprinkles_boxShadow_borderNeutral_darkMode__1qvf1da4d typography_lightModeTone_light__1b9a5rt10 typography_darkModeTone_dark__1b9a5rt13 sprinkles_background_surface_lightMode__1qvf1da34 sprinkles_background_surfaceDark_darkMode__1qvf1da37">
+          <span class="reset_base__1eiowcn0 sprinkles_display_block_mobile__1qvf1da50 typography_fontFamily__1b9a5rt0 typography_fontWeight_regular__1b9a5rt1 typography_tone_neutral__1b9a5rt1t typography_textSize_large__1b9a5rta capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
